Fixed a few bugs with the cropper, register modal

--- a/src/app/article/article.component.scss
+++ b/src/app/article/article.component.scss
@@ -62,4 +62,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  max-width: 100%;
+  height: auto;
 }
